fix spacing; update prod URLs

--- a/assets/less/pvqt.less
+++ b/assets/less/pvqt.less
@@ -229,7 +229,6 @@ button.clear-all-btn {
 .step {
   .no-gutter();
   border-bottom: solid 1px @blue-dark;
-  padding-bottom: 30px;
   padding-top: 23px;
 }
 
@@ -841,16 +840,14 @@ button.btn-lg {
 
 .page-wrapper {
   min-height: 100%;
-  margin-bottom: -349.5px;
   &:after {
     content: "";
     display: block;
-    height: 350px;
   }
 }
 
 #step-by-step-container {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
 #step-pager {
